syntax = "proto3";

option go_package = "github.com/feditools/login/pkg/grpc";

package feditools.login.fedi_account;

service FediAccount {
  rpc GetFediAccount (GetFediAccountRequest) returns (GetFediAccountReply) {}
}

message GetFediAccountRequest {
  int64 id = 1;
}

message GetFediAccountReply {
  int64 id = 1;
  string username = 2;
  int64 instance_id = 3;
  string display_name = 4;
  bool is_admin = 5;
}
